Changes for 1.0beta7:

 - got rid of message "Bad protocol identification '0'" when doing check_service[ssh]
 (Alexei)
 - performance improvements for zabbix_suckerd (Alexei)
 - added support of CSS (Alexei)
 - support of processor load on Solaris 2.6. Thanks to Mariusz. (Alexei)
 - improvements for user-defined graphs. Thanks to Mariusz. (Alexei)
 - improvements for System Maps. Thanks to Mariusz. (Alexei)
 - support for host groups (Alexei)
 - added table hosts_groups (Alexei)
 - added table groups (Alexei)
 - ./configure to find PostgreSQL's includes in /usr/local/include
 (Alexei)
 - basic support for log rotating (Alexei)
 - added additional error checks in get_value_snmp() (Alexei)

Changes for 1.0beta6:

 - parameter StatFile removed (Alexei)
 - added support for check_service(service,ip,port) (Alexei)
 - added support for check_port(ip,port) (Alexei)
 - fixed check_right(). Thanks to Daniel Higgins. (Alexei)
 - more changes to send_email(). Thanks to Daniel Higgins. (Alexei)
 - added file TODO (Alexei)
 - status will be changed to UNCREACHABLE only in case of three network errors
 (Alexei)
 - added column hosts.network_errors (Alexei)
 - support for parameters netloadin[*] and netloadout[*] (Alexei)
 - added src/zabbix_agent/stats.c and stats.h (Alexei)
 - added parameter StatFile to zabbix_agentd.conf (Alexei)
 - availability graph for IT Services (Alexei)
 - improvement in user rights handling routines (Alexei)
 - if trigger status is UNKNOWN, set function.lastvalue to NULL (Alexei)
 - fixed permission check for all *.php (Alexei)
 - Priority was renamed to Severity (Alexei)
 - added graph to availability report (Alexei)
 - added frontends/php/chart4.php (Alexei)
 - availability report will not show trigger expressions (Alexei)
 - added creation of table 'sessions' to migration scripts for 
 1.0beta4 (Alexei)
 - no dependency on register_globals in php.ini (Alexei)
 - zabbix_suckerd to write "Connection reset by peer" to LogFile
 (Alexei)