@@ -30,7 +30,14 @@
 	$result=DBselect("select name,width,height from graphs where graphid=".$HTTP_GET_VARS["graphid"]);
 
 	$name=DBget_field($result,0,0);
-	$width=DBget_field($result,0,1);
+	if(isset($HTTP_GET_VARS["x"]))
+	{
+		$width=$HTTP_GET_VARS["x"];
+	}
+	else
+	{
+		$width=DBget_field($result,0,1);
+	}
 	$height=DBget_field($result,0,2);
 
 	$sizeX=$width;
